cerca de tenerlo falta concurrencia y logs en admin

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -51,6 +51,12 @@
         <button class="btn" data-sensor="access" id="btnSimAccess">Simular acceso</button>
       </div>
     </div>
+
+    <div class="card alerts-card" id="alertsCard" hidden>
+        <h3>Alertas en Tiempo Real</h3>
+        <ul class="alerts-list" id="alertsList">
+        </ul>
+    </div>
   </section>
 </main>
 
