Funciona stmp!!! GG en el chat pero un fallo solo en observador a la hora de simular

--- a/frontend/index.html
+++ b/frontend/index.html
@@ -23,7 +23,7 @@
       <label>Contraseña<input id="password" type="password" required /></label>
       <div class="row">
         <button type="submit" class="btn">Entrar</button>
-        <button type="button" id="btnGuest" class="btn secondary">Entrar como Observador</button>
+        <button type="button" id="btnGuest" class="btn secondary">Entrar como Invitado</button>
       </div>
     </form>
   </section>
